[package]
name = "wstest"
version = "0.1.0"
authors = ["David Haig <david@ninjametal.com>"]
edition = "2018"

[dependencies]
embedded-websocket = { version = "0.5" }
rand = "0.8.3"
thiserror = "1.0.19"
native-tls = "0.2"
byteorder = { version = "1.3", default-features = false }
rand_core = "0.6"
ctrlc = "3.1.7"